feat: translation + tidy up

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,4 +1,7 @@
 {
-  "title": "Home",
-  "parent": "Home"
+  "services": {
+    "airport": "Airport Transfer",
+    "business": "Business Transfer",
+    "events": "Events & Wedding"
+  }
 }
