feat: tranlation for hero section

--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -1,4 +1,9 @@
 {
+  "hero": {
+    "limo": "Limousine",
+    "sub": "Enjoy the ride",
+    "subsub": "for your success in Business"
+  },
   "services": {
     "airport": "Airport Transfer",
     "business": "Business Transfer",
