feat: add testimonial section

--- a/public/locales/en/services.json
+++ b/public/locales/en/services.json
@@ -1,4 +1,8 @@
 {
   "title": "Services",
-  "parent": "Home"
+  "parent": "Home",
+  "testimoni": {
+    "pre-title": "What Our Customers Say",
+    "title": "What Our Customers Say"
+  }
 }
