--- a/public/locales/tr/navbar.json
+++ b/public/locales/tr/navbar.json
@@ -1,6 +1,6 @@
 {
-  "home": "Ev",
-  "about": "Hakkımızda",
-  "services": "Hizmetler",
-  "contact": "Bağlantı"
+  "home": "Home",
+  "about": "About",
+  "services": "Services",
+  "contact": "Contact Us"
 }
