--- a/public/locales/tr/home.json
+++ b/public/locales/tr/home.json
@@ -1,12 +1,27 @@
 {
   "hero": {
-    "limo": "Limuzin",
-    "sub": "Sürüş keyfi",
-    "subsub": "İş dünyasındaki başarınız için"
+    "limo": "Limousine",
+    "sub": "Enjoy the ride",
+    "subsub": "for your success in Business"
   },
   "services": {
-    "airport": "Havaalanı Transferi",
-    "business": "İş Transferi",
-    "events": "Etkinlikler ve Düğün"
+    "airport": {
+      "title": "Airport Transfer",
+      "desc": "This is the description for the airport blah blah blah"
+    },
+    "business": {
+      "title": "Business Transfer",
+      "desc": "This is the description for the business blah blah blah"
+    },
+    "events": {
+      "title": "Events & Wedding",
+      "desc": "This is the description for the events blah blah blah"
+    }
+  },
+  "promo": {
+    "title": "Luxury Cars",
+    "subtitle": "for Maximum Satisfacion",
+    "desc": "Lorem debitis praesentium consequatur dolor quisquam. Fugiat officia sunt quaerat atque deleniti? Molestiae deserunt similique consequuntur temporibus blanditiis possimus.",
+    "cta": "Read More"
   }
 }
