--- a/public/locales/en/home.json
+++ b/public/locales/en/home.json
@@ -34,6 +34,12 @@
     "driver": "Professional Licensed Driver"
   },
   "contact": {
+    "title": {
+      "use": "Use Our",
+      "form": "quick booking form",
+      "limo": "to get a limousine"
+    },
+    "desc": "Lorem debitis praesentium consequatur dolor quisquam. Fugiat officia sunt quaerat atque deleniti? Molestiae deserunt similique consequuntur.",
     "call": "Call to book an order:"
   }
 }
