--- a/public/locales/tr/home.json
+++ b/public/locales/tr/home.json
@@ -34,6 +34,25 @@
     "driver": "Professional Licensed Driver"
   },
   "contact": {
-    "call": "Call to book an order:"
+    "title": {
+      "use": "Use Our",
+      "form": "quick booking form",
+      "limo": "to get a limousine"
+    },
+    "desc": "Lorem debitis praesentium consequatur dolor quisquam. Fugiat officia sunt quaerat atque deleniti? Molestiae deserunt similique consequuntur.",
+    "call": "Call to book an order:",
+    "form": {
+      "cta": "Get Limousine",
+      "passengers": "Passengers",
+      "location": "Enter Location",
+      "ordertime": "Order Time",
+      "date": "Order Date",
+      "class": {
+        "title": "Limo Class",
+        "standard": "Standard",
+        "vip": "VIP",
+        "luxury": "Luxury"
+      }
+    }
   }
 }
