--- a/public/locales/tr/about.json
+++ b/public/locales/tr/about.json
@@ -15,7 +15,7 @@
     "help": {
       "title": "If you need more help",
       "desc": "Adipisicing inventore adipisicing sint quasi aut Dignissimos delectus excepturi doloribus amet eveniet Voluptates sapiente molestias sequi dolore.",
-      "cta": "Read More"
+      "cta": "Contact Us"
     }
   },
   "right": {
